iptables-saved
# Generated by iptables-save v1.4.7 on Mon Jul 14 19:16:20 2014
*filter
:INPUT ACCEPT [2598:696551]
:FORWARD ACCEPT [7698:601720]
:OUTPUT ACCEPT [2982:725398]
:d_vif-67eaawlf - [0:0]
:d_vif-67eaawlf_icmp - [0:0]
:d_vif-67eaawlf_tcp - [0:0]
:d_vif-67eaawlf_udp - [0:0]
:d_vif-a3skznxt - [0:0]
:d_vif-a3skznxt_icmp - [0:0]
:d_vif-a3skznxt_tcp - [0:0]
:d_vif-a3skznxt_udp - [0:0]
:d_vif-qhwoue9v - [0:0]
:d_vif-qhwoue9v_icmp - [0:0]
:d_vif-qhwoue9v_tcp - [0:0]
:d_vif-qhwoue9v_udp - [0:0]
:d_vif-ww7o9p7c - [0:0]
:d_vif-ww7o9p7c_icmp - [0:0]
:d_vif-ww7o9p7c_tcp - [0:0]
:d_vif-ww7o9p7c_udp - [0:0]
:s_vif-67eaawlf - [0:0]
:s_vif-67eaawlf_icmp - [0:0]
:s_vif-67eaawlf_tcp - [0:0]
:s_vif-67eaawlf_udp - [0:0]
:s_vif-a3skznxt - [0:0]
:s_vif-a3skznxt_icmp - [0:0]
:s_vif-a3skznxt_tcp - [0:0]
:s_vif-a3skznxt_udp - [0:0]
:s_vif-qhwoue9v - [0:0]
:s_vif-qhwoue9v_icmp - [0:0]
:s_vif-qhwoue9v_tcp - [0:0]
:s_vif-qhwoue9v_udp - [0:0]
:s_vif-ww7o9p7c - [0:0]
:s_vif-ww7o9p7c_icmp - [0:0]
:s_vif-ww7o9p7c_tcp - [0:0]
:s_vif-ww7o9p7c_udp - [0:0]
-A INPUT -d 10.112.8.45/32 -i brpub -p tcp -m physdev --physdev-in vif-+ -m tcp --dport 24224 -j ACCEPT 
-A INPUT -d 10.112.8.45/32 -i brpub -p udp -m physdev --physdev-in vif-+ -m udp --dport 24224 -j ACCEPT 
-A INPUT -d 10.112.8.0/24 -i brpub -m physdev --physdev-in vif-+ -j REJECT --reject-with icmp-port-unreachable 
-A FORWARD -m physdev --physdev-in vif-qhwoue9v --physdev-is-bridged -j s_vif-qhwoue9v 
-A FORWARD -m physdev --physdev-out vif-qhwoue9v --physdev-is-bridged -j d_vif-qhwoue9v 
-A FORWARD -m physdev --physdev-in vif-a3skznxt --physdev-is-bridged -j s_vif-a3skznxt 
-A FORWARD -m physdev --physdev-out vif-a3skznxt --physdev-is-bridged -j d_vif-a3skznxt 
-A FORWARD -m physdev --physdev-in vif-67eaawlf --physdev-is-bridged -j s_vif-67eaawlf 
-A FORWARD -m physdev --physdev-out vif-67eaawlf --physdev-is-bridged -j d_vif-67eaawlf 
-A FORWARD -m physdev --physdev-in vif-ww7o9p7c --physdev-is-bridged -j s_vif-ww7o9p7c 
-A FORWARD -m physdev --physdev-out vif-ww7o9p7c --physdev-is-bridged -j d_vif-ww7o9p7c 
-A d_vif-67eaawlf -p icmp -m state --state NEW,RELATED,ESTABLISHED -j d_vif-67eaawlf_icmp 
-A d_vif-67eaawlf -p udp -m state --state NEW,ESTABLISHED -j d_vif-67eaawlf_udp 
-A d_vif-67eaawlf -p tcp -m state --state NEW,ESTABLISHED -j d_vif-67eaawlf_tcp 
-A d_vif-67eaawlf_icmp -s 10.112.9.98/32 -j ACCEPT 
-A d_vif-67eaawlf_icmp -s 10.112.8.32/32 -p icmp -j ACCEPT 
-A d_vif-67eaawlf_icmp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-67eaawlf_icmp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-67eaawlf_icmp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-67eaawlf_icmp -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-67eaawlf_icmp -j DROP 
-A d_vif-67eaawlf_tcp -s 10.112.9.98/32 -j ACCEPT 
-A d_vif-67eaawlf_tcp -s 10.112.8.32/32 -p tcp -m tcp --dport 1:65535 -j ACCEPT 
-A d_vif-67eaawlf_tcp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-67eaawlf_tcp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-67eaawlf_tcp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-67eaawlf_tcp -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-67eaawlf_tcp -j DROP 
-A d_vif-67eaawlf_udp -s 10.112.9.98/32 -j ACCEPT 
-A d_vif-67eaawlf_udp -s 10.112.8.32/32 -p udp -m udp --dport 10050:10051 -j ACCEPT 
-A d_vif-67eaawlf_udp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-67eaawlf_udp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-67eaawlf_udp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-67eaawlf_udp -p udp -m state --state ESTABLISHED -j ACCEPT 
-A d_vif-67eaawlf_udp -j DROP 
-A d_vif-a3skznxt -p icmp -m state --state NEW,RELATED,ESTABLISHED -j d_vif-a3skznxt_icmp 
-A d_vif-a3skznxt -p udp -m state --state NEW,ESTABLISHED -j d_vif-a3skznxt_udp 
-A d_vif-a3skznxt -p tcp -m state --state NEW,ESTABLISHED -j d_vif-a3skznxt_tcp 
-A d_vif-a3skznxt_icmp -s 10.112.8.32/32 -p icmp -j ACCEPT 
-A d_vif-a3skznxt_icmp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-a3skznxt_icmp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-a3skznxt_icmp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-a3skznxt_icmp -s 10.112.9.122/32 -j ACCEPT 
-A d_vif-a3skznxt_icmp -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-a3skznxt_icmp -j DROP 
-A d_vif-a3skznxt_tcp -s 10.112.8.32/32 -p tcp -m tcp --dport 1:65535 -j ACCEPT 
-A d_vif-a3skznxt_tcp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-a3skznxt_tcp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-a3skznxt_tcp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-a3skznxt_tcp -s 10.112.9.122/32 -j ACCEPT 
-A d_vif-a3skznxt_tcp -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-a3skznxt_tcp -j DROP 
-A d_vif-a3skznxt_udp -s 10.112.8.32/32 -p udp -m udp --dport 10050:10051 -j ACCEPT 
-A d_vif-a3skznxt_udp -s 10.112.9.119/32 -j ACCEPT 
-A d_vif-a3skznxt_udp -s 10.112.9.97/32 -j ACCEPT 
-A d_vif-a3skznxt_udp -s 10.112.9.63/32 -j ACCEPT 
-A d_vif-a3skznxt_udp -s 10.112.9.122/32 -j ACCEPT 
-A d_vif-a3skznxt_udp -p udp -m state --state ESTABLISHED -j ACCEPT 
-A d_vif-a3skznxt_udp -j DROP 
-A d_vif-qhwoue9v -p icmp -m state --state NEW,RELATED,ESTABLISHED -j d_vif-qhwoue9v_icmp 
-A d_vif-qhwoue9v -p udp -m state --state NEW,ESTABLISHED -j d_vif-qhwoue9v_udp 
-A d_vif-qhwoue9v -p tcp -m state --state NEW,ESTABLISHED -j d_vif-qhwoue9v_tcp 
-A d_vif-qhwoue9v_icmp -s 10.112.8.32/32 -p icmp -j ACCEPT 
-A d_vif-qhwoue9v_icmp -s 10.112.9.102/32 -j ACCEPT 
-A d_vif-qhwoue9v_icmp -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-qhwoue9v_icmp -j DROP 
-A d_vif-qhwoue9v_tcp -s 172.16.250.100/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A d_vif-qhwoue9v_tcp -s 10.112.8.32/32 -p tcp -m tcp --dport 1:65535 -j ACCEPT 
-A d_vif-qhwoue9v_tcp -s 10.112.9.102/32 -j ACCEPT 
-A d_vif-qhwoue9v_tcp -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-qhwoue9v_tcp -j DROP 
-A d_vif-qhwoue9v_udp -s 10.112.8.32/32 -p udp -m udp --dport 10050:10051 -j ACCEPT 
-A d_vif-qhwoue9v_udp -s 10.112.9.102/32 -j ACCEPT 
-A d_vif-qhwoue9v_udp -p udp -m state --state ESTABLISHED -j ACCEPT 
-A d_vif-qhwoue9v_udp -j DROP 
-A d_vif-ww7o9p7c -p icmp -m state --state NEW,RELATED,ESTABLISHED -j d_vif-ww7o9p7c_icmp 
-A d_vif-ww7o9p7c -p udp -m state --state NEW,ESTABLISHED -j d_vif-ww7o9p7c_udp 
-A d_vif-ww7o9p7c -p tcp -m state --state NEW,ESTABLISHED -j d_vif-ww7o9p7c_tcp 
-A d_vif-ww7o9p7c_icmp -s 10.112.8.32/32 -p icmp -j ACCEPT 
-A d_vif-ww7o9p7c_icmp -p icmp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-ww7o9p7c_icmp -j DROP 
-A d_vif-ww7o9p7c_tcp -s 172.16.250.100/32 -p tcp -m tcp --dport 80 -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -s 172.16.250.100/32 -p tcp -m tcp --dport 11111 -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -s 172.16.250.100/32 -p tcp -m tcp --dport 8001 -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -s 172.16.250.100/32 -p tcp -m tcp --dport 22 -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -s 10.112.8.32/32 -p tcp -m tcp --dport 1:65535 -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT 
-A d_vif-ww7o9p7c_tcp -j DROP 
-A d_vif-ww7o9p7c_udp -s 10.112.8.32/32 -p udp -m udp --dport 10050:10051 -j ACCEPT 
-A d_vif-ww7o9p7c_udp -p udp -m state --state ESTABLISHED -j ACCEPT 
-A d_vif-ww7o9p7c_udp -j DROP 
-A s_vif-67eaawlf -p icmp -j s_vif-67eaawlf_icmp 
-A s_vif-67eaawlf -p udp -j s_vif-67eaawlf_udp 
-A s_vif-67eaawlf -p tcp -j s_vif-67eaawlf_tcp 
-A s_vif-a3skznxt -p icmp -j s_vif-a3skznxt_icmp 
-A s_vif-a3skznxt -p udp -j s_vif-a3skznxt_udp 
-A s_vif-a3skznxt -p tcp -j s_vif-a3skznxt_tcp 
-A s_vif-qhwoue9v -p icmp -j s_vif-qhwoue9v_icmp 
-A s_vif-qhwoue9v -p udp -j s_vif-qhwoue9v_udp 
-A s_vif-qhwoue9v -p tcp -j s_vif-qhwoue9v_tcp 
-A s_vif-ww7o9p7c -p icmp -j s_vif-ww7o9p7c_icmp 
-A s_vif-ww7o9p7c -p udp -j s_vif-ww7o9p7c_udp 
-A s_vif-ww7o9p7c -p tcp -j s_vif-ww7o9p7c_tcp 
COMMIT
# Completed on Mon Jul 14 19:16:20 2014
# Generated by iptables-save v1.4.7 on Mon Jul 14 19:16:20 2014
*nat
:PREROUTING ACCEPT [130:8538]
:POSTROUTING ACCEPT [87:5620]
:OUTPUT ACCEPT [8:499]
:vif-67eaawlf_snat - [0:0]
:vif-67eaawlf_snat_exceptions - [0:0]
:vif-a3skznxt_snat - [0:0]
:vif-a3skznxt_snat_exceptions - [0:0]
:vif-qhwoue9v_snat - [0:0]
:vif-qhwoue9v_snat_exceptions - [0:0]
:vif-ww7o9p7c_snat - [0:0]
:vif-ww7o9p7c_snat_exceptions - [0:0]
-A POSTROUTING -s 10.112.9.103/32 -j vif-qhwoue9v_snat_exceptions 
-A POSTROUTING -s 10.112.9.103/32 -j vif-qhwoue9v_snat 
-A POSTROUTING -s 10.112.9.98/32 -j vif-a3skznxt_snat_exceptions 
-A POSTROUTING -s 10.112.9.98/32 -j vif-a3skznxt_snat 
-A POSTROUTING -s 10.112.9.122/32 -j vif-67eaawlf_snat_exceptions 
-A POSTROUTING -s 10.112.9.122/32 -j vif-67eaawlf_snat 
-A POSTROUTING -s 10.112.9.108/32 -j vif-ww7o9p7c_snat_exceptions 
-A POSTROUTING -s 10.112.9.108/32 -j vif-ww7o9p7c_snat 
COMMIT
